<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/dl"
    android:orientation="vertical">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    >
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />



       <TextView
           android:layout_below="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="100dp"
           android:gravity="center"
           android:layout_marginTop="12dp"
           android:text="@string/welcome"
           android:textSize="26sp" />

   <LinearLayout

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/LL1"
          android:orientation="vertical"
          android:layout_centerInParent="true">

             <EditText
                 android:id="@+id/name"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"

                 android:paddingTop="12dp"
                 android:paddingLeft="5dp"
                 android:hint="@string/name"
                 android:textSize="20sp"
                 android:inputType="textPersonName"
                 android:autofillHints="" tools:targetApi="o"
                 />

             <EditText
                 android:id="@+id/email"
                 android:layout_marginTop="5dp"
                 android:paddingLeft="5dp"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:paddingTop="12dp"
                 android:hint="@string/e_mail"
                 android:textSize="20sp"
                 android:inputType="textEmailAddress"
                 android:autofillHints="" tools:targetApi="o"
                />

             <EditText
                 android:id="@+id/pwd"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:paddingLeft="5dp"
                 android:paddingTop="12dp"
                 android:hint="@string/password"
                 android:textSize="20sp"
                 android:inputType="textPassword"
                 android:importantForAutofill="no" tools:targetApi="o"
              />

             <Button
                 android:id="@+id/register"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:paddingTop="12dp"
                 android:layout_gravity="center"
                 android:text="@string/register"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:textAppearance="@style/buttonStyle1"/>



          <TextView
              android:id="@+id/tv1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_below="@id/register"
              android:layout_marginTop="30dp"
              android:textAlignment="center"
              android:text="@string/already"
              />


   </LinearLayout>






</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>